--- a/hotel/homepage.html
+++ b/hotel/homepage.html
@@ -25,7 +25,7 @@
     </div>
     <nav id="nav">
         <a href="#home">หน้าแรก</a>
-        <a href="#">จองที่พัก/เข้าสู่ระบบ</a>
+        <a href="login.html">จองที่พัก/เข้าสู่ระบบ</a>
         <a href="#info">เกี่ยวกับ</a>
         <a href="#contact">ช่องทางการติดต่อ</a>
     </nav>
